--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'java'
     id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 version = project.sdk_version
@@ -39,17 +38,32 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
-artifacts {
-    archives jar
-}
 
 publishing {
     publications {
         shadow(MavenPublication) { publication ->
-            project.shadow.component(publication)
+            from components.java
             version = "${project.sdk_version}"
             artifactId = "${project.archives_base_name}"
             groupId = "${project.maven_group}"
+            pom {
+                name = 'OneBot SDK'
+                description = '基于 [OneBot] 标准的通用 SDK'
+                url = 'https://github.com/cnlimiter/onebot-sdk'
+                licenses {
+                    license {
+                        name = 'AGPLV3'
+                        url = 'https://www.gnu.org/licenses/gpl-3.0.html'
+                    }
+                }
+                developers {
+                    developer {
+                        id = 'cnlimiter'
+                        name = 'cnlimiter'
+                        email = 'cnlimiter@163.com'
+                    }
+                }
+            }
         }
     }
 
